--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <div class="hero-avatar">
-                    <img src="picture.jpg" alt="Abhishek Srivastava" class="profile-picture">
+                    <img src="picture.jpeg" alt="Abhishek Srivastava" class="profile-picture">
                 </div>
                 <h1 class="hero-title">Abhishek Srivastava</h1>
                 <div class="hero-subtitle">
