Add Black-Scholes Estimator project card
Added project card for Black-Scholes Estimator with description, skills, and links.

--- a/index.html
+++ b/index.html
@@ -548,7 +548,35 @@
                 <h2 class="section-title">Projects</h2>
                 <div class="section-divider"></div>
             </div>
+            
             <div class="projects-grid">
+                <div class="project-card" data-project="black-scholes-estimator">
+    <div class="project-header">
+        <h3 class="project-title">Black-Scholes Estimator</h3>
+        <span class="project-date">Sep 2025</span>
+    </div>
+    <p class="project-description">
+        Interactive Streamlit web app for option pricing using the Black-Scholes model.  
+        Enter option parameters, visualize Greeks, and analyze trading strategies for financial derivatives.
+    </p>
+    <div class="project-skills">
+        <span class="project-skill">Python</span>
+        <span class="project-skill">Streamlit</span>
+        <span class="project-skill">Pytorch</span>
+        <span class="project-skill">Neural networks</span>
+        <span class="project-skill">Black-Scholes</span>
+        <span class="project-skill">Data Visualization</span>
+    </div>
+    <div class="project-links">
+        <a href="https://blackscholesestimator.streamlit.app" target="_blank" class="project-link">
+            <i class="fab fa-python"></i> View on Streamlit
+        </a>
+        <a href="https://github.com/abhisheksrivastava99/blackscholesestimator" target="_blank" class="project-link">
+            <i class="fab fa-github"></i> View Code
+        </a>
+    </div>
+</div>
+
                 <div class="project-card" data-project="sti-analysis">
                     <div class="project-header">
                         <h3 class="project-title">Time Series Analysis of the Straits Times Index (STI)</h3>
