--- a/index.html
+++ b/index.html
@@ -550,6 +550,80 @@
             </div>
             
             <div class="projects-grid">
+                <div class="project-card" data-project="bitcoin-hd-wallet">
+    <div class="project-header">
+        <h3 class="project-title">Bitcoin HD Wallet</h3>
+        <span class="project-date">Nov 2025</span>
+    </div>
+    <p class="project-description">
+        Secure hierarchical deterministic Bitcoin wallet CLI built in Go.<br>
+        Supports BIP39 mnemonic generation, BIP32/BIP44 key derivation, AES-256-GCM encryption, and encrypted backups—delivering military-grade security and crypto best practices. Fast wallet creation, secure storage, flexible CLI, and testnet/mainnet modes.
+    </p>
+    <div class="project-skills">
+        <span class="project-skill">Go</span>
+        <span class="project-skill">Cryptography</span>
+        <span class="project-skill">BIP39/BIP32/BIP44</span>
+        <span class="project-skill">AES-256-GCM</span>
+        <span class="project-skill">PBKDF2</span>
+        <span class="project-skill">CLI</span>
+        <span class="project-skill">Security</span>
+    </div>
+    <div class="project-links">
+        <a href="https://github.com/abhisheksrivastava99/bitcoin_hd_wallet" target="_blank" class="project-link">
+            <i class="fab fa-github"></i> View Code
+        </a>
+    </div>
+</div>
+
+                <div class="project-card" data-project="vehicle-claim-fraud-detection">
+    <div class="project-header">
+        <h3 class="project-title">Vehicle Claim Fraud Detection</h3>
+        <span class="project-date">Oct 2025</span>
+    </div>
+    <p class="project-description">
+        Complete machine learning workflow for detecting fraudulent vehicle insurance claims.<br>
+        Uses advanced ML and deep learning approaches (Random Forest, XGBoost, TabNet) to address class imbalance and achieve high recall. Deploys feature engineering, threshold optimization, and interpretable model insights for robust results.
+    </p>
+    <div class="project-skills">
+        <span class="project-skill">Python</span>
+        <span class="project-skill">Pandas</span>
+        <span class="project-skill">Scikit-learn</span>
+        <span class="project-skill">PyTorch</span>
+        <span class="project-skill">TabNet</span>
+        <span class="project-skill">Class Imbalance</span>
+        <span class="project-skill">Deep Learning</span>
+    </div>
+    <div class="project-links">
+        <a href="https://github.com/abhisheksrivastava99/vehicle_claim_fraud_detection" target="_blank" class="project-link">
+            <i class="fab fa-github"></i> View Code
+        </a>
+    </div>
+</div>
+
+                <div class="project-card" data-project="credit-card-fraud-detection">
+    <div class="project-header">
+        <h3 class="project-title">Credit Card Fraud Detection</h3>
+        <span class="project-date">Oct 2025</span>
+    </div>
+    <p class="project-description">
+        Machine learning solution for real-world credit card fraud detection.<br>
+        Explores class imbalance handling, feature engineering, and multiple models (Logistic Regression, Random Forest, XGBoost) to achieve high fraud recall with low false positives. Includes robust evaluation and test validation.
+    </p>
+    <div class="project-skills">
+        <span class="project-skill">Python</span>
+        <span class="project-skill">Pandas</span>
+        <span class="project-skill">Scikit-learn</span>
+        <span class="project-skill">XGBoost</span>
+        <span class="project-skill">Imbalanced Data</span>
+        <span class="project-skill">SMOTE</span>
+    </div>
+    <div class="project-links">
+        <a href="https://github.com/abhisheksrivastava99/credit_card_fraud_detection" target="_blank" class="project-link">
+            <i class="fab fa-github"></i> View Code
+        </a>
+    </div>
+</div>
+
                 <div class="project-card" data-project="black-scholes-estimator">
     <div class="project-header">
         <h3 class="project-title">Black-Scholes Estimator</h3>
