Add Blockchain skills to the skill categories
Added new skill category for Blockchain with Golang and Solidity skills.

--- a/index.html
+++ b/index.html
@@ -529,6 +529,13 @@
                     </div>
                 </div>
                 <div class="skill-category">
+                    <h3 class="skill-category-title">Blockchain</h3>
+                    <div class="skill-chips">
+                        <span class="skill-chip">Golang</span>
+                        <span class="skill-chip">Solidity</span>
+                    </div>
+                </div>
+                <div class="skill-category">
                     <h3 class="skill-category-title">Methodologies</h3>
                     <div class="skill-chips">
                         <span class="skill-chip">Jira</span>
